[package]
name = "strides"
version = "0.1.0"
edition = "2024"
description = "Async-first terminal UI spinners and progress bars"
license = "MIT"
documentation = "https://docs.rs/strides"
repository = "https://github.com/matze/strides"

[dependencies]
async-io = "2.6.0"
crossterm = { version = "0.29.0", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
futures-lite = "2.6.1"
owo-colors = "4.2.3"
terminal_size = "0.4.3"

[dev-dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.26", features = ["stream"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
